# avin-rs

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
res/splash/: splash.txt.bak
src/: conf.rs  data.rs  lib.rs  main.rs  utils.rs
src/core/: account.rs  action.rs  asset.rs  bar.rs  chart.rs  direction.rs  event.rs  iid.rs  mod.rs  operation.rs  range.rs  summary.rs  tic.rs  timeframe.rs  trade.rs  trade_list.rs  transaction.rs  work.rs
src/core/order/: limit_order.rs  market_order.rs  mod.rs  order.rs  stop_order.rs
src/data/: category.rs  cli.rs  data_file_bar.rs  error.rs  iid.rs  iid_cache.rs  instrument.rs  manager.rs  market_data.rs  mod.rs  source.rs  source_moex.rs
src/extra/: extremum.rs  mod.rs  size.rs  term.rs  trend.rs
src/strategy/: every.rs  mod.rs  t_1m_t1.rs
src/tcs/: mod.rs
src/tester/: bar_stream.rs  data_stream.rs  mod.rs  test.rs  tester.rs  virtual_broker.rs
src/tinkoff/: broker.rs  interceptor.rs  mod.rs
src/tinkoff/api/: common.rs  instruments.rs  marketdata.rs  mod.rs  operations.rs  orders.rs  sandbox.rs  stoporders.rs  users.rs
src/trader/: mod.rs  trader.rs  work.rs
src/utils/: cmd.rs  misc.rs  mod.rs
