[package]
name = "avin"
version = "0.1.0"
edition = "2021"

[dependencies]
    chrono = "0.4"
    chrono-tz = "*"
    bitflags = "2.6"
    reqwest = { version = "0.12", features = ["json"] }
    tokio = { version = "1", features = ["full"] }
    serde = "1.0"
    serde_json = "1.0"
    polars = { version = "0.46", features = [
        "lazy",
        "describe",
        "json",
        "parquet",
        "strings",
        "dtype-datetime",
        "dtype-date",
        "dtype-time",
        "dtype-duration",
        "timezones",
        "temporal",
        "rows",
        "is_in",
        "mode",
        "offset_by",
        "is_between",
        "polars-ops",
    ] }
    time-unit = "0.1"

