[package]
name = "avin"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "A great future awaits me!"

[dependencies]
    # async-stream = "0.3"
    bitcode = "=0.6.5"
    # bitflags = "2.6"
    chrono = "0.4"
    # chrono-tz = "0.10"
    # futures = "0.3"
    # futures-util = "0.2"
    reqwest = { version = "0.12", features = ["json"] }
    # serde = "1.0"
    serde_json = "1.0"
    time-unit = "0.1"
    # tinkoff-invest-api = { version = "0.2" }
    tokio = { version = "1", features = ["full"] }
    # tonic = "0.13"
    polars = { version = "0.46", features = [
        "lazy",
        "describe",
        "json",
        "parquet",
        "strings",
        "dtype-datetime",
        "dtype-date",
        "dtype-time",
        "dtype-duration",
        "timezones",
        "temporal",
        "rows",
        "is_in",
        "mode",
        "offset_by",
        "is_between",
        "polars-ops",
    ] }




