[package]
name = "avin"
version = "0.1.0"
edition = "2021"
description = "A great future awaits me!"
license = "MIT"
authors = ["Alex Avin <mr.alexavin@gmail.com>"]
repository = "https://github.com/arsvincere/avin"

[dependencies]
chrono = "0.4"
bitcode = "0.6.5"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
time-unit = "0.1"
tokio = { version = "1", features = ["full"] }
polars = { version = "0.46", features = [
    "lazy",
    "describe",
    "json",
    "parquet",
    "strings",
    "dtype-datetime",
    "dtype-date",
    "dtype-time",
    "dtype-duration",
    "timezones",
    "temporal",
    "rows",
    "is_in",
    "mode",
    "offset_by",
    "is_between",
    "polars-ops",
] }
uuid = {version = "1.16.0", features = [ "v4", ]}
tonic = { version = "0.11", features = ["tls", "tls-roots", "gzip"] }
# tonic = { version = "0.13", features = ["transport", "channel", "tls-ring"] }
tonic-build = { version = "0.8.0", features = [] }
# tonic-build = "0.13"
prost = "0.12"
# prost = "0.13.5"
prost-types = "0.12"
# prost-types = "0.13.5"
flume = "0.11.1"
log = "0.4.27"
iced = { version = "0.13", features = ["debug"]}
